force-app/main/default/objects/CampaignMember/fields/ABN_Tax_Reference__c.field-meta.xml
<CustomField>
    <fullName>ABN_Tax_Reference__c</fullName>
    <formula>IF( LeadId != null,Lead.ABN_Tax_Reference__c ,IF(ContactId != null , Contact.Account.ABN_Tax_Reference__c,&apos;&apos;))</formula>
    <label>ABN/Tax Reference</label>
    <type>Text</type>
</CustomField>