force-app/main/default/objects/CampaignMember/fields/Accomodation_Days__c.field-meta.xml
<CustomField>
    <fullName>Accomodation_Days__c</fullName>
    <label>Accomodation Days</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>