force-app/main/default/objects/CampaignMember/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>HYPERLINK(&quot;https://qantas.my.salesforce.com/&quot;&amp;Contact.Account.Id, Contact.Account.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>