force-app/main/default/objects/CampaignMember/fields/Account_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Phone_Number__c</fullName>
    <description>Account Phone Number</description>
    <formula>Contact.Account.Phone_Country_Code__c&amp;Contact.Account.Phone_Area__c&amp;Contact.Account.Phone_Number__c</formula>
    <label>Account Phone Number</label>
    <type>Text</type>
</CustomField>