force-app/main/default/objects/CampaignMember/fields/Agency_Chain__c.field-meta.xml
<CustomField>
    <fullName>Agency_Chain__c</fullName>
    <formula>HYPERLINK( &quot;/&quot; &amp; Related_Account__r.Agency_Sales_Region__c, Related_Account__r.Agency_Sales_Region__r.Name, &quot;_self&quot; )</formula>
    <label>Agency Chain</label>
    <type>Text</type>
</CustomField>