force-app/main/default/objects/CampaignMember/fields/Assigned_to_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To Track the campaign members assigned to logged-in user</description>
    <label>Assigned to User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>