force-app/main/default/objects/CampaignMember/fields/Business_Partner__c.field-meta.xml
<CustomField>
    <fullName>Business_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Sales Conference</description>
    <label>Business Partner</label>
    <type>Checkbox</type>
</CustomField>