force-app/main/default/objects/CampaignMember/fields/Campaign_Member_Status_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Status_Changed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Member Status Last Changed</label>
    <type>DateTime</type>
</CustomField>