force-app/main/default/objects/CampaignMember/fields/Communication_Id__c.field-meta.xml
<CustomField>
    <fullName>Communication_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Communication Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>