force-app/main/default/objects/CampaignMember/fields/Dietary_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Requirements__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dietary Requirements</label>
    <type>TextArea</type>
</CustomField>