force-app/main/default/objects/CampaignMember/fields/FF_Number__c.field-meta.xml
<CustomField>
    <fullName>FF_Number__c</fullName>
    <description>Formula field pulling info from contact</description>
    <formula>Contact.Frequent_Flyer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FF Number</label>
    <type>Text</type>
</CustomField>