force-app/main/default/objects/CampaignMember/fields/Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number__c</fullName>
    <label>Flight Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JQ-7</fullName>
            </value>
            <value>
                <fullName>QF-001</fullName>
            </value>
            <value>
                <fullName>QF-035</fullName>
            </value>
            <value>
                <fullName>QF-051</fullName>
            </value>
            <value>
                <fullName>QF-081</fullName>
            </value>
            <value>
                <fullName>QF-117</fullName>
            </value>
            <value>
                <fullName>QF-127</fullName>
            </value>
            <value>
                <fullName>QF-29</fullName>
            </value>
            <value>
                <fullName>QF-37</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>