force-app/main/default/objects/CampaignMember/fields/Freight_AWB_Handling_Code__c.field-meta.xml
<CustomField>
    <fullName>Freight_AWB_Handling_Code__c</fullName>
    <description>Freight - Records the handling code associated with the AWB number entered</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Handling Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>