force-app/main/default/objects/CampaignMember/fields/Freight_AWB_Number__c.field-meta.xml
<CustomField>
    <fullName>Freight_AWB_Number__c</fullName>
    <description>Freight - AWB Number to be provided by the customer while raising Complaint against Freight business.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>AWB# must be in format &quot;XXX-XXXXXXXX&quot;</inlineHelpText>
    <label>AWB#</label>
    <length>12</length>
    <type>Text</type>
</CustomField>