force-app/main/default/objects/CampaignMember/fields/Freight_AWB_Status__c.field-meta.xml
<CustomField>
    <fullName>Freight_AWB_Status__c</fullName>
    <description>Freight - captures the status of the AWB associated with the Campaign record</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AWB Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>