force-app/main/default/objects/CampaignMember/fields/Freight_Destination__c.field-meta.xml
<CustomField>
    <fullName>Freight_Destination__c</fullName>
    <description>Freight - It used for AWB Integration, contains destination.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Destination</label>
    <length>100</length>
    <type>Text</type>
</CustomField>