force-app/main/default/objects/CampaignMember/fields/Frequent_Flyer_Number__c.field-meta.xml
<CustomField>
    <fullName>Frequent_Flyer_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Frequent Flyer Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>