force-app/main/default/objects/CampaignMember/fields/Insight2__c.field-meta.xml
<CustomField>
    <fullName>Insight2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Insight2</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>