force-app/main/default/objects/CampaignMember/fields/Insight4__c.field-meta.xml
<CustomField>
    <fullName>Insight4__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Insight4</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>