force-app/main/default/objects/CampaignMember/fields/Insight_1__c.field-meta.xml
<CustomField>
    <fullName>Insight_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insight 1</label>
    <type>TextArea</type>
</CustomField>