force-app/main/default/objects/CampaignMember/fields/Insight_2__c.field-meta.xml
<CustomField>
    <fullName>Insight_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insight 2</label>
    <type>TextArea</type>
</CustomField>