force-app/main/default/objects/CampaignMember/fields/Insight_5__c.field-meta.xml
<CustomField>
    <fullName>Insight_5__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insight 5</label>
    <type>TextArea</type>
</CustomField>