force-app/main/default/objects/CampaignMember/fields/Latest_Status__c.field-meta.xml
<CustomField>
    <fullName>Latest_Status__c</fullName>
    <description>Freight - AWB Information last capture time stamp to be monitored.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Latest Status</label>
    <type>DateTime</type>
</CustomField>