force-app/main/default/objects/CampaignMember/fields/Lead_Key_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Key_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Key Id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>