force-app/main/default/objects/CampaignMember/fields/Leisure_Interest__c.field-meta.xml
<CustomField>
    <fullName>Leisure_Interest__c</fullName>
    <formula>IF (INCLUDES (Contact.Leisure_Interest__c, &quot;Art Exhibitions&quot; ), &quot;Art Exhibitions;&quot;,null) &amp;
IF (INCLUDES (Contact.Leisure_Interest__c, &quot;Ballet&quot; ), &quot;Ballet;&quot;,null) &amp;
IF (INCLUDES (Contact.Leisure_Interest__c, &quot;Children Events&quot; ), &quot;Children Events;&quot;,null) &amp;
IF (INCLUDES (Contact.Leisure_Interest__c, &quot;Comedy&quot; ), &quot;Comedy;&quot;,null) &amp;
IF (INCLUDES (Contact.Leisure_Interest__c, &quot;Concerts&quot; ), &quot;Concerts;&quot;,null) &amp;
IF (INCLUDES (Contact.Leisure_Interest__c, &quot;Fashion Shows&quot; ), &quot;Fashion Shows;&quot;,null) &amp;
IF (INCLUDES (Contact.Leisure_Interest__c, &quot;Music Festivals&quot; ), &quot;Music Festivals;&quot;,null) &amp;
IF (INCLUDES (Contact.Leisure_Interest__c, &quot;Music Performances&quot; ), &quot;Music Performances;&quot;,null) &amp;
IF (INCLUDES (Contact.Leisure_Interest__c, &quot;Opera&quot; ), &quot;Opera;&quot;,null) &amp;
IF (INCLUDES (Contact.Leisure_Interest__c, &quot;Theatre&quot; ), &quot;Theatre;&quot;,null) &amp;
IF (INCLUDES (Contact.Leisure_Interest__c, &quot;Thought Leader Events&quot; ), &quot;Thought Leader Events;&quot;,null)</formula>
    <label>Leisure Interest</label>
    <type>Text</type>
</CustomField>