force-app/main/default/objects/CampaignMember/fields/Log_a_Call_URL__c.field-meta.xml
<CustomField>
    <fullName>Log_a_Call_URL__c</fullName>
    <formula>if( (Log_call_url__c!=&apos;&apos; &amp;&amp; Log_call_url__c!=null) ,HYPERLINK( &apos;/&apos;+Log_call_url__c ,
 &apos;https://qantas.my.salesforce.com/&apos;+Log_call_url__c , &quot;_Parent&quot;),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If you want to do a new log a call then use the button else for updates use this link to amend the call notes of an existing log a call.</inlineHelpText>
    <label>Log a Call URL</label>
    <type>Text</type>
</CustomField>