force-app/main/default/objects/CampaignMember/fields/Log_call_url__c.field-meta.xml
<CustomField>
    <fullName>Log_call_url__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Log_call_url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>