force-app/main/default/objects/CampaignMember/fields/Member_Status_Last_Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Member_Status_Last_Changed_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Member Status Last Changed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>