force-app/main/default/objects/CampaignMember/fields/No_of_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>No_of_Email_Sent__c</fullName>
    <label>No of Email Sent</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>