force-app/main/default/objects/CampaignMember/fields/Number_of_Responses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Responses__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Insight1</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>