force-app/main/default/objects/CampaignMember/fields/Offer_Status__c.field-meta.xml
<CustomField>
    <fullName>Offer_Status__c</fullName>
    <label>Offer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Pending - Customer</fullName>
            </value>
            <value>
                <fullName>Pending - QBR SC</fullName>
            </value>
            <value>
                <fullName>Pending - SME</fullName>
            </value>
            <value>
                <fullName>Pending - Loyalty</fullName>
            </value>
            <value>
                <fullName>Pending - Qantas Club</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Offer - Accepted- Detail</fullName>
                <isActive>false</isActive>
                <label>Offer - Accepted- Detail</label>
            </value>
            <value>
                <fullName>Offer - Declined</fullName>
                <isActive>false</isActive>
                <label>Offer - Declined</label>
            </value>
            <value>
                <fullName>Offer redeemed</fullName>
                <isActive>false</isActive>
                <label>Offer redeemed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>