force-app/main/default/objects/CampaignMember/fields/Other_Insights__c.field-meta.xml
<CustomField>
    <fullName>Other_Insights__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Insights</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>