force-app/main/default/objects/CampaignMember/fields/Other_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Other_Mailing_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Mailing Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>