force-app/main/default/objects/CampaignMember/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Priority</label>
    <length>18</length>
    <type>Text</type>
</CustomField>