force-app/main/default/objects/CampaignMember/fields/QF_Domestic_Share__c.field-meta.xml
<CustomField>
    <fullName>QF_Domestic_Share__c</fullName>
    <label>QF Domestic Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>