force-app/main/default/objects/CampaignMember/fields/QF_Revenue__c.field-meta.xml
<CustomField>
    <fullName>QF_Revenue__c</fullName>
    <label>QF Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>