force-app/main/default/objects/CampaignMember/fields/Related_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact_Phone__c</fullName>
    <description>To store the value of the related Contact Phone number in Campaign Member.
Only used by SME Campaign users.Not to be shown in layout,but will be used in reports.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>(Related) Contact Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>