force-app/main/default/objects/CampaignMember/fields/Response_7__c.field-meta.xml
<CustomField>
    <fullName>Response_7__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response 7</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>