force-app/main/default/objects/CampaignMember/fields/Response_8__c.field-meta.xml
<CustomField>
    <fullName>Response_8__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response 8</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>