force-app/main/default/objects/CampaignMember/fields/SME_Offer__c.field-meta.xml
<CustomField>
    <fullName>SME_Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SME Offers</label>
    <referenceTo>SME_Offers__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>