force-app/main/default/objects/CampaignMember/fields/Tickets_Sent__c.field-meta.xml
<CustomField>
    <fullName>Tickets_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The tickets are sent manually are ticked by the agents</description>
    <label>Tickets Sent</label>
    <type>Checkbox</type>
</CustomField>