force-app/main/default/objects/CampaignMember/recordTypes/Freight.recordType-meta.xml
<RecordType>
    <fullName>Freight</fullName>
    <active>true</active>
    <description>For capturing Freight related sales activity insights</description>
    <label>Freight</label>
</RecordType>