force-app/main/default/objects/CampaignMember/recordTypes/Marketing_Event.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Event</fullName>
    <active>true</active>
    <description>To view a SME Event Campaign Member on the Contact and able to add new Campaign Members to a Campaign</description>
    <label>Marketing - Event</label>
</RecordType>