force-app/main/default/objects/CampaignMember/recordTypes/SME_Campaign.recordType-meta.xml
<RecordType>
    <fullName>SME_Campaign</fullName>
    <active>true</active>
    <label>SME Campaign</label>
</RecordType>